--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BACKEND_DATABASE_URL=postgresql://bet404_user:Jordan1234@localhost:5432/bet404
+#BACKEND_DATABASE_URL=postgresql://bet404_user:Jordan1234@localhost:5432/bet404
+DATABASE_URL=postgresql://postgres.lufmtkoyxdyrdhiimtzb:abbasaliskylounge@aws-0-us-east-1.pooler.supabase.com:6543/postgres?sslmode=require
