--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,4 +1,4 @@
-flask
+flask==3.0.3
 python-dotenv
 psycopg2-binary   # keep if you use Postgres; remove if you use sqlite
 supabase          # keep if you use the Supabase python client
