--- a/vercel.json
+++ b/vercel.json
@@ -5,13 +5,13 @@
   "outputDirectory": "dist",
   "functions": {
     "api/index.py": {
-      "runtime": "python3.9"
+      "runtime": "python@3.9"
     }
   },
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/api/index.py"
+      "destination": "/api/index"
     },
     {
       "source": "/(.*)",
